# llm-router

./: .gitignore  LICENSE  README.md  TODO.md  config.example.yaml  pyproject.toml
llm_router/: __init__.py  config.py  router.py
llm_router/backends/: __init__.py  base.py  ollama.py  openai_compat.py
tests/: test_chat_ping.py  test_concurrency.py  test_probe_models.py
